<resources>
    <string name="app_name">Look4Me</string>
    <string name="instructions"> Comece a descobrir sua história da família </string>

    <string name="button_text">Pesquise pelo seu sobrenome</string>

    <string name="button_text1">Pesquise pelo seu nome</string>

    <string name="button_text2">Encontre seu país</string>

    <string name="input_hint">Sobrenome</string>

    <string name="loading">Buscando pelos seus antecedentes</string>

    <string name="no_results">"Lamento :( Não foi possível localizar seu sobrenome"</string>

    <string name="no_search_term">Informe um termo de busca</string>

    <string name="no_network">verifique sua conexão.</string>

    <string name="str_empty">" "</string>

    <string name="imagem_do_logo_do_app">Imagem do logo do app</string>

    <string name="Bemvindo">Boas-vindas Visitante! Por onde começamos?</string>

    <string name="minha_localiza_o">Minha Localização</string>

    <string name="onde_meu_nome_mais_comum">Onde meu nome é mais comum</string>

    <string name="onde_meu_sobrenome_mais_comum">País onde é mais comum</string>

    <string name="o_sobrenome_mais_comum_em_cada_pa_s">O sobrenome mais comum em cada país</string>

    <string name="onde_meu_nome_mais_comum1">Onde meu nome é mais comum?</string>

    <string name="digite_seu_nome">Digite seu nome aqui</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="servico_indisponivel">Esse serviço está indisponível</string>
    <string name="sem_endereco">Endereço indisponível</string>
    <string name="coordenada_invalida">Coordenadas inválidas</string>

    <!-- PAIS SEARCH -->

    <string name="pais">País</string>
    <string name="continente">Continente</string>
    <string name="nome_mais_comum">Nome mais comum do país</string>

    <!-- NOME SEARCH -->

    <string name="nome">Nome</string>
    <string name="pais_comum">País onde é mais comum</string>
    <string name="mais_info">Mais informações</string>

    <!-- SOBRENOME SEARCH -->

    <string name="sobrenome">Sobrenome</string>

    <string name="vazio"/>
    <string name="termo_vazio">Informe um termo para a busca</string>
    <string name="sem_conexao">Sem conexão</string>
    <string name="sem_resultado">Nenhum resultado encontrado</string>
    <string name="carregando">Carregando...</string>


    <string name="pesquisar">Pesquisar</string>
    <string name="voltar">Voltar</string>
    <string name="onde_fica_nossa_sede">ONDE FICA NOSSA SEDE</string>

</resources>