<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imglogomain"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imagem_do_logo_do_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arvore"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtmain"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:text="@string/Bemvindo"
        android:textColor="@color/marrom"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogomain" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmain">

        <Button
            android:id="@+id/btnlocalizacao"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:text="@string/onde_fica_nossa_sede"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnnome"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/onde_meu_nome_mais_comum"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnlocalizacao"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnsobrenome"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/onde_meu_sobrenome_mais_comum"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnnome"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnpais"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/o_sobrenome_mais_comum_em_cada_pa_s"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnsobrenome"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>